--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ p{
     color: blueviolet;
     text-align: center;
 }
+h3{
+    background-color: chocolate;
+    font-weight: 200px;
+    color: darkblue;
+}
